feat: analysis of PCA components, descriptions

--- a/Identify_Customer_Segments.ipynb
+++ b/Identify_Customer_Segments.ipynb
@@ -7514,13 +7514,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def component_analysis(pca, i):\n",
-    "    if i > len(pca.components_):\n",
-    "        return \"no info\"\n",
-    "    \n",
-    "    weight_df = pd.DataFrame({'weight': pca.components_[i]}, index=df_ss.columns)\n",
-    "    print(weight_df.sort_values(by=['weight']).head(5))\n",
-    "    print(weight_df.sort_values(by=['weight']).tail(5))\n"
+    "\n"
    ]
   },
   {
@@ -7546,6 +7540,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Map weights for the first principal component to corresponding feature names\n",
+    "# and then print the linked values, sorted by weight.\n",
+    "# HINT: Try defining a function here or in a new cell that you can reuse in the\n",
+    "# other cells.\n",
+    "\n",
     "wdf = get_component_important_weights(pca, 0)"
    ]
   },
@@ -7669,6 +7668,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Analysis of weights in first PCA component: These features are connected to the types of homes found in a an area (1-2 person/10+ family), money-saver tendencies, financial success, how mobile (MOBI_REGI). When the features with negative weight values decrease, the strength or influence of this component increases. When the features with positive weight values increase, this PCA component's weight also increases. But the range in weight values for this component are not particulatly high, at -.2 to + .2. This correlates with the fact that this PCA component by itself accounts for just 15.9% of the total variance."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 93,
    "metadata": {},
@@ -7700,6 +7706,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Analysis of second PCA component: These features that comprise the second PCA component are related to personality as influenced by upbringing -- relgious, dominating movement of a person's youth, whether the person tends towards money-saving, dutiful, traditional-minded -- are all features inversely related to the component. As they decrease, the component increases, and these features tend to be linked, in that they will increase and decrease together. The features for likelihood of returning merchandise, being likely to be financially prepared, being event-oriented, etc -- are positively correlated with the PCA component: as they increase so does the influence of the component.  These positively weighted features tend to increase and decrease together and in opposition to those that are negatively weighted.\n",
+    "\n",
+    "There is slightly more variability in the positively weighted features in this component compared to the first PCA component. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 95,
    "metadata": {},
@@ -7728,6 +7743,13 @@
    ],
    "source": [
     "ax = wdf2.plot.bar(y='weight', rot=90, figsize=(12,5))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Analysis of third PCA component: In this component, we have features for male/female, combative attitude, dominant-minded, critical-minded and rational as negative weights, with male/female and combative attitude being relatively strong influencers. Positively weighted features include low financial interest, cultural-mindedness, family-minded, socially-minded, and dreamful. Four of the five positive weights are features that measure personality typology. These features correlate with one another, suggesting that those with one of these traits will likely share the other positively-weighted traits. "
    ]
   },
   {
@@ -8459,10 +8481,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Map weights for the first principal component to corresponding feature names\n",
-    "# and then print the linked values, sorted by weight.\n",
-    "# HINT: Try defining a function here or in a new cell that you can reuse in the\n",
-    "# other cells.\n",
+    "\n",
     "\n"
    ]
   },
